--- a/test-index.html
+++ b/test-index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camphouse | Post something amazing. ✨</title>
-    <meta name="google-site-verification" content="0BgvK93HL6c4z1CPMHYuWYLl7rkd9huccT4fE1V2ydQ" />
+
     <!-- External CSS file -->
     <link rel="stylesheet" href="styles.css" />
 	<!-- GT Maru & New Spirit fonts -->
@@ -13,11 +13,11 @@
 	<link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <!-- Favicon -->
     <link rel="icon" href="img/icon.png" />
-	
+	<meta name="google-site-verification" content="0BgvK93HL6c4z1CPMHYuWYLl7rkd9huccT4fE1V2ydQ" />
 	<!-- OG Meta Properties -->
 	<meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta property="og:image" content="img/bankis-frontpage.PNG">
     <meta property="og:url" content="https://www.camphouse.net">
     <meta property="og:description" content="Post something amazing ✨">
     <meta property="theme-color" content="#ffc34d" />
@@ -27,9 +27,34 @@
     <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
     <meta name="twitter:title" content="Camphouse">
     <meta name="twitter:description" content="Post something amazing ✨">
-    <meta name="twitter:image:src" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta name="twitter:image:src" content="img/bankis-frontpage.PNG">
 
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'GT Maru', sans-serif;
+            background-color: #f8f8f8;
+        }
+        .banner {
+            background-color: #f15e62;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px;
+            font-size: 18px;
+            position: ;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 9999;
 
+        }
+        .banner a {
+            color: white;
+            font-weight: bold;
+            text-decoration: underline;
+        }
+    </style>
     <!-- box icon links -->
     <link
       rel="stylesheet"
@@ -40,15 +65,15 @@
       <header class="main-header container">
         <nav class="main-nav">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
 
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="<!--donwload link -->" class="nav-link">Download</a>
+              <a href="/download" class="nav-link">Download</a>
             </li>
             <li class="nav-item">
-              <a href="/blog" class="nav-link">Blog</a>
+              <a href="https://blog.camphouse.net" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
               <a href="/terms" class="nav-link">Terms of Service</a>
@@ -58,9 +83,6 @@
             </li>
             <li class="nav-item">
               <a href="/community" class="nav-link">Community Guidelines</a>
-            </li>
-            <li class="nav-item">
-              <a href="https://corp.camphouse.net" class="nav-link">Coporate</a>
             </li>
           </ul>
 
@@ -83,7 +105,7 @@
 
 
           <div class="hero-btn-group">
-            <a disabled href="" class="btn btn-large btn-light">
+            <a disabled href="https://aqurilladownload.rollviral.repl.co/download" class="btn btn-large btn-light">
               <i class="bx bx-download"></i> Download Desktop Client
             </a> <a href="https://app.camphouse.net" class="btn btn-large btn-dark">
               Open Camphouse
@@ -97,7 +119,7 @@
     <!--collaboration section start-->
     <section class="collaboration">
       <div class="row container">
-        <img src="https://www.camphouse.net/img/post.png" alt="Cheese is £10 now???" class="grid-image" />
+        <img src="img/post.png" alt="Cheese is £10 now???" class="grid-image" />
         <div class="text-group">
           <h2 class="text secondary-title">
             Make picaso-like posts
@@ -116,7 +138,7 @@
     <section class="voice-channel">
       <div class="row container">
         <img
-          src="https://www.camphouse.net/img/comment.png"
+          src="img/comment.png"
           alt="A comment from Camphouse"
           class="grid-image order-2" />
         <div class="text-group order-1">
@@ -152,7 +174,7 @@
             Engage with the digital world like never before! Whether you're posting your thoughts, sharing a stunning pic, dropping a witty comment, or spreading the love with a like or share, it's all about embracing the social experience. Dive into the content you're passionate about, connect with friends and influencers, and make your online presence truly shine. So, why wait? Post, comment, like, share - the digital playground is yours to explore, so go ahead and do it all!
           </p>
         </div>
-        <img src="https://www.camphouse.net/img/hero.png" alt="Example Posts" class="grid-image" />
+        <img src="img/hero.png" alt="Example Posts" class="grid-image" />
       </div>
     </section>
     <!--video call section end-->
@@ -161,7 +183,7 @@
     <section class="download">
       <div class="row container remove-grid">
         <h2>Start camping!</h2>
-        <a href="#" class="btn btn-large btn-brand">
+        <a href="https://aqurilladownload.rollviral.repl.co/download" class="btn btn-large btn-brand">
           <i class="bx bx-download"></i>Download the Camphouse Desktop client
         </a>
       </div>
@@ -196,7 +218,7 @@
 
         <div class="footer-links-group">
           <h5 class="footer-title">Product</h5>
-          <a href="<!--download link-->" class="footer-link">Download</a>
+          <a href="https://aqurilladownload.rollviral.repl.co/download" class="footer-link">Download</a>
           <a href="https://status.camphouse.net" class="footer-link">Status</a>
         </div>
 
@@ -208,7 +230,7 @@
         <div class="footer-links-group">
           <h5 class="footer-title">Resources</h5>
           <a href="/support" class="footer-link">Support</a>
-          <a href="/blog" class="footer-link">Blog</a>
+          <a href="https://blog.camphouse.net" class="footer-link">Blog</a>
           <a href="/feedback" class="footer-link">Feedback</a>
         </div>
 
@@ -217,7 +239,6 @@
           <a href="/terms" class="footer-link">Terms of Service</a>
           <a href="/privacy" class="footer-link">Privacy Policy</a>
           <a href="/community" class="footer-link">Community Guidelines</a>
-          <a href="/credits" class="footer-link">Acknowledgements</a>
         </div>
 
         <div class="divider"></div>
@@ -225,7 +246,7 @@
 
       <div class="row container remove-grid">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
         <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
       </div>
