--- a/test-index.html
+++ b/test-index.html
@@ -64,7 +64,7 @@
        <section class="hero">
       <header class="main-header container">
         <nav class="main-nav">
-          <a href="index.html" class="logo">
+          <a href="/" class="logo">
             <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
 
