--- a/test-index.html
+++ b/test-index.html
@@ -245,7 +245,7 @@
       </div>
 
       <div class="row container remove-grid">
-          <a href="index.html" class="logo">
+          <a href="/" class="logo">
             <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
         <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
