--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
        <section class="hero-dark">
       <header class="main-header container">
         <nav class="main-nav">
-          <a href="index.html" class="logo">
+          <a href="/" class="logo">
             <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
 
@@ -159,7 +159,7 @@
       </div>
 
       <div class="row container remove-grid">
-          <a href="index.html" class="logo">
+          <a href="/" class="logo">
             <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
         <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
