--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <!--moderations tool section start-->
     <section class="moderation-tools">
       <div class="row container">
-        <img src="https://www.camphouse.net/img/messages.png" alt="Direct Messages in Camphouse" class="grid-image" />
+        <img src="img/messages.png" alt="Direct Messages in Camphouse" class="grid-image" />
         <div class="text-group">
           <h2 class="text secondary-title">And many, many, more features.</h2>
           <p>
