--- a/feedback.html
+++ b/feedback.html
@@ -111,7 +111,7 @@
     <!--collaboration section start-->
     <section class="collaboration">
       <div class="row container">
-        <img src="https://cdn.discordapp.com/attachments/742574117735235644/1153506347648811129/desktop.png" alt="Cheese is £10 now???" class="grid-image" height="500px">
+        <img src="https://www.camphouse.net/img/download/desktop.png" alt="Cheese is £10 now???" class="grid-image" height="500px">
         <div class="text-group">
           <h2 class="text secondary-title">
             Desktop Client Feedback
