--- a/terms.html
+++ b/terms.html
@@ -90,7 +90,7 @@
 
         <div class="text-group order-1">
 <h2>1. Acceptance of Terms</h2>
-        <p>Welcome to Camphouse, a plce where you can create postd and Speak your mind. These Terms of Service ("Terms") govern your use of the Camphouse website ("Website"), associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to abide by these Terms. If you do not agree with these Terms, please refrain from using our Services.</p>
+        <p>Welcome to Camphouse, a place where you can create postd and Speak your mind. These Terms of Service ("Terms") govern your use of the Camphouse website ("Website"), associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to abide by these Terms. If you do not agree with these Terms, please refrain from using our Services.</p>
 
 <h2>2. Eligibility</h2>
         <p>You must be at least 13 years of age to use Camphouse. If you are accessing our Services on behalf of a company or entity, you confirm that you have the authority to bind such entity to these Terms. If you are under 18 years of age, you affirm that you have obtained consent from a parent or legal guardian to use our Services.</p>
