--- a/feedback.html
+++ b/feedback.html
@@ -119,8 +119,8 @@
 		  <p>
             Give us some time on this one...
           </p>
-		              <a disabled class="btn btn-large btn-dark">
-              <i class=""></i> Feedback Form Coming Soon
+<a disabled href="https://forms.gle/5MjJ96zk8WehSeft9" class="btn btn-large btn-dark">
+              <i class=""></i> Provide feedback here!
             </a>
         </div>
         </div>
